# LMS-API

./: info.txt
app/: pyproject.toml
app/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
