[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["[omkar shinde] <omkar.shinde@everestek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.86.0"}
SQLAlchemy = "^1.4.43"
psycopg2 = "^2.9.5"
PyJWT = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
